# aid

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: AidTest.cmake  Sanitizers.cmake
docs/: 01-architecture.md  02-integrating-call-api.md  03-integrating-the-address-book.md  04-webhook-and-health.md  05-writing-a-plugin.md  06-value-types.md  07-configuration.md  08-operational-model.md  09-how-calls-become-tickets.md  10-getting-started.md  11-building-testing-and-scripts.md  12-troubleshooting-and-glossary.md  README.md
lib/: CMakeLists.txt
lib/adapters/davical_plugin/: CMakeLists.txt  DaviCalAdapter.cpp  factory.cpp
lib/adapters/davical_plugin/internal/: DcHttp.cpp  DcVCardParser.cpp
lib/adapters/openproject_plugin/: CMakeLists.txt  OpenProjectAdapter.cpp
lib/adapters/openproject_plugin/internal/: HandlerLedger.cpp  OpDashboardBuilder.cpp  OpHttp.cpp  OpStatusMap.cpp  OpTicketRepo.cpp  OpUserRepo.cpp  ProducedLedger.cpp  payload.cpp  url.cpp
lib/adapters/ws/: CMakeLists.txt  WsHubAdapter.cpp
lib/auth/: AuthDb.cpp  AuthService.cpp  CMakeLists.txt  PasswordHasher.cpp  ResetGrantStore.cpp  SessionRepo.cpp  UserGate.cpp  UserRepo.cpp
lib/controllers/: CMakeLists.txt  CallController.cpp  ControllerSupport.cpp  HealthController.cpp  LoginController.cpp  SessionGuard.cpp  UiController.cpp  UiStreamController.cpp  WebhookController.cpp
lib/crosscutting/: CMakeLists.txt  Config.cpp  CorrelationId.cpp  LogSink.cpp  Logger.cpp  LoggerTrantorBridge.cpp  Version.cpp
lib/domain/: CMakeLists.txt  CallLineFormatter.cpp  CallTracker.cpp  StateTransitions.cpp  TicketRouter.cpp
lib/infrastructure/: CMakeLists.txt  HealthService.cpp  HttpClient.cpp  Mailbox.cpp  MailboxEngine.cpp  MembershipReconciler.cpp  Wal.cpp  WebhookMailbox.cpp
lib/plumbing/: CMakeLists.txt  Error.cpp
lib/ports/: CMakeLists.txt
lib/serialization/: ActionResultJson.cpp  CMakeLists.txt  DashboardJson.cpp
lib/usecases/: AppendComment.cpp  CMakeLists.txt  CloseTicket.cpp  GetDashboard.cpp  HandleAcceptedCall.cpp  HandleHangup.cpp  HandleIncomingCall.cpp  HandleOutgoingCall.cpp  HandleTransferCall.cpp  ReconcileMemberships.cpp  TicketDeltaEmitter.cpp
lib/value-types/: CMakeLists.txt  CallEvent.cpp  TimeFormat.cpp
microkernel/: CMakeLists.txt  main.cpp
microkernel/include/: ConfigError.h  Constants.h  ServiceContainer.h  config.json
microkernel/include/Controllers/: CallController.h  Controller.h  UiController.h
microkernel/include/Creators/: AddrSystemCreator.h  TicketCreator.h  TicketSystemCreator.h  UiCreator.h
microkernel/include/Logger/: Logger.h
microkernel/include/Models/: Call.h  Ticket.h
microkernel/include/Systems/: AddressSystem.h  TicketSystem.h
microkernel/include/Ui/: Ui.h
microkernel/src/Controllers/: CallController.cpp  Controller.cpp  UiController.cpp
microkernel/src/Creators/: AddrSystemCreator.cpp  TicketCreator.cpp  TicketSystemCreator.cpp  UiCreator.cpp
microkernel/src/Models/: Call.cpp  Ticket.cpp
microkernel/src/Systems/: AddressSystem.cpp  TicketSystem.cpp
microkernel/src/Ui/: Ui.cpp
microkernel/src/lib/: DaviCal.cpp  DaviCal.h  OpenProject.cpp  OpenProject.h  WebInterface.cpp  WebInterface.h
scripts/: build-ui.sh  (+8 more)
src/: CMakeLists.txt  main.cpp
src/admin/: main.cpp
tests/: CMakeLists.txt  test_smoke.cpp
tests/adapters/davical_plugin/: CMakeLists.txt  test_davical_adapter.cpp  test_dc_http.cpp  test_dc_vcard_parser.cpp  test_plugin_smoke.cpp
tests/adapters/openproject_plugin/: CMakeLists.txt  fake_http_dispatcher.h  test_handler_ledger.cpp  test_op_dashboard.cpp  test_op_http.cpp  test_op_status_map.cpp  test_op_ticket_repo.cpp  test_op_user_repo.cpp  test_payload.cpp  test_plugin_smoke.cpp  test_produced_ledger.cpp
tests/adapters/ws/: CMakeLists.txt  test_ws_hub_adapter.cpp
tests/admin/: CMakeLists.txt  test_admin_cli.cpp
tests/auth/: CMakeLists.txt  test_auth_service.cpp  test_authdb.cpp  test_password_hasher.cpp  test_reset_grant_store.cpp  test_session_repo.cpp  test_user_gate.cpp  test_user_repo.cpp
tests/controllers/: CMakeLists.txt  test_call_controller.cpp  test_controller_support.cpp  test_health_controller.cpp  test_login_controller.cpp  test_session_guard.cpp  test_ui_controller.cpp  test_ui_controller_loop_affinity.cpp  test_ui_stream_controller.cpp  test_webhook_controller.cpp
tests/crosscutting/: CMakeLists.txt  test_clock.cpp  test_config.cpp  test_config_routing.cpp  test_correlationid.cpp  test_logger.cpp  test_logsink.cpp
tests/domain/: CMakeLists.txt  test_calllineformatter.cpp  test_calltracker.cpp  test_statetransitions.cpp  test_ticketrouter.cpp
tests/fakes/: CMakeLists.txt  FakeAddressBook.cpp  FakeAddressBook.h  FakeClock.h  FakeTicketStore.cpp  FakeTicketStore.h  FakeUiNotifier.cpp  FakeUiNotifier.h  FakeWebSocketConnection.cpp  FakeWebSocketConnection.h
tests/infrastructure/: CMakeLists.txt  test_health_service.cpp  test_http_client.cpp  test_mailbox.cpp  test_membership_reconciler.cpp  test_plugin_loader.cpp  test_startup_sequencer.cpp  test_wal.cpp  test_webhook_mailbox.cpp
tests/infrastructure/test_plugin/: test_plugin.cpp  test_port.h
tests/integration/: CMakeLists.txt  IntegrationHarness.h  MockHttpServer.h  it_call_dispatch.cpp  it_incoming_call.cpp  it_mailbox_backpressure.cpp  it_plugin_end_to_end.cpp  it_query_scope.cpp  it_sigterm_drain.cpp  it_ui_round_trip.cpp  it_wal_replay.cpp
tests/plumbing/: CMakeLists.txt  test_actionresult.cpp  test_result.cpp  test_task.cpp  test_walrecord.cpp
tests/ports/: CMakeLists.txt  test_addressbook.cpp  test_ticketstore.cpp  test_uinotifier.cpp
tests/usecases/: CMakeLists.txt  test_append_comment.cpp  test_close_ticket.cpp  test_concurrent_same_ticket.cpp  test_get_dashboard.cpp  test_handle_accepted_call.cpp  test_handle_hangup.cpp  test_handle_incoming_call.cpp  test_handle_outgoing_call.cpp  test_handle_transfer_call.cpp  test_reconcile_memberships.cpp  test_ticket_delta_emitter.cpp
tests/value-types/: CMakeLists.txt  test_callevent.cpp  test_contact.cpp  test_dashboard.cpp  test_ids.cpp  test_ticket.cpp
(+138 files in other folders)
